--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,1 +1,11 @@
-.footer-wrap{background-color:#fff9f5;border-top:1px solid rgba(182,182,182,.3137254902);padding:15px 0}.footer-wrap .footer-img{text-align:center}.footer-wrap .footer-img img{margin:0 5px}
+.footer-wrap {
+  background-color: #fff9f5;
+  border-top: 1px solid rgba(182, 182, 182, 0.3137254902);
+  padding: 15px 0;
+}
+.footer-wrap .footer-img {
+  text-align: center;
+}
+.footer-wrap .footer-img img {
+  margin: 0 5px;
+}/*# sourceMappingURL=footer.css.map */
